Fix PostHog (#1968)
