# valhalla/jawn/src/tsoa-build/private/swagger.json
@@ -480,6 +480,12 @@
 			},
 			"HeliconeMeta": {
 				"properties": {
+					"posthogHost": {
+						"type": "string"
+					},
+					"posthogApiKey": {
+						"type": "string"
+					},
 					"omitResponseLog": {
 						"type": "boolean"
 					},
